@@ -1,14 +1,15 @@
 bin_PROGRAMS=dccserver dccsend
-man_MANS=dccserver.1
+man_MANS=dccserver.1 dccsend.1
 
 LDADD=@LIBOBJS@
 
 dccserver_SOURCES=dccserver.c
 dccsend_SOURCES=dccsend.c
 
-DISTCLEANFILES=	dccserver.1
+DISTCLEANFILES=	dccserver.1 dccsend.1
 
 EXTRA_DIST=	dccserver.man dccserver.mdoc \
+		dccsend.man dccsend.mdoc \
 		debian/changelog debian/control debian/copyright debian/dirs \
 		debian/docs debian/rules \
 		err.c errx.c getaddrinfo.c getaddrinfo.h strlcpy.c warn.c warnx.c
